# platform

./: .bazelignore  .bazelrc  .eslintrc.json  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: labeler.yml
.github/workflows/: auto-merge.yaml  merge.yaml  nightly.yaml  pr.yaml  push.yaml
.trunk/: trunk.yaml
api-gateway/: cloudbuild.yaml  docker-compose.yaml  dockerfile  envoy.template.yaml
api-gateway/.github/workflows/: merge.yaml
api-gateway/.trunk/: trunk.yaml
api-gateway/infra/: BUILD.bazel  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  index.ts  package.json  pnpm-lock.yaml
api-gateway/test/: go.mod  go.sum  main.go
firebase/: .firebaserc  .gitignore  data-structure.json  database.rules.bolt  firebase.json  firestore.rules  start-emulator.sh
firebase/.trunk/: trunk.yaml
firebase/firebase-export-1684930968830EZ0TiK/firestore_export/all_namespaces/all_kinds/: all_namespaces_all_kinds.export_metadata  output-0
firebase/firebase-export-16849426347137tImsn/firestore_export/: firestore_export.overall_export_metadata
firebase/firebase-export-16849426347137tImsn/firestore_export/all_namespaces/all_kinds/: all_namespaces_all_kinds.export_metadata
firebase/functions/: .eslintrc.js  .gitignore  buf.gen.yaml  jest.config.js  package-lock.json  package.json  test-service-account.json  tsconfig.dev.json  tsconfig.json
firebase/functions/src/: billing.ts  index.ts  reconcile.ts  registration.ts  trip-offer.ts
firebase/functions/src/utils/: bill-generator.ts  client.ts  distance.ts  expected-error.ts
firebase/functions/tests/: bill-generator.test.ts  create-bill.test.ts  create-transaction-from-bill.test.ts  reconcile.test.ts
infra/: BUILD.bazel  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  bun.lockb  index.ts  package.json  pnpm-lock.yaml
infra/.trunk/: tools  trunk.yaml
infra/IAM/service-accounts/: artifact-registry.ts  cloud-build.ts  cloud-run-service-manager.ts  default-compute.ts  pulumi.ts
infra/apis/: cloud-build.ts  cloud-functions.ts  cloud-run.ts  event-arc.ts  iam.ts  secret-manager.ts
infra/gcp/IAM/service-accounts/: artifact-registry.ts  cloud-build.ts  cloud-run-service-manager.ts  default-compute.ts  pulumi.ts
infra/gcp/apis/: cloud-build.ts  cloud-functions.ts  cloud-run.ts  event-arc.ts  iam.ts  secret-manager.ts
infra/gcp/components/: service-account.ts  workload-identity.ts
infra/gcp/resources/: artifact-registries.ts  firebase.ts  secrets.ts
infra/resources/: artifact-registries.ts  firebase.ts  gcp-project.ts  secrets.ts  workload-identity.ts
