load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

# gazelle:prefix github.com/ride-app/platform
# gazelle:build_file_name BUILD.bazel
# gazelle:proto disable_global
gazelle(
    name = "gazelle",
)

npm_link_all_packages(name = "node_modules")

# npm_repositories()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@tsconfig/node-lts",
        "//:node_modules/@tsconfig/strictest",
    ],
)
