"""
This module defines the Bazel dependencies for the platform project.
"""

bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "aspect_rules_js", version = "1.39.1")
bazel_dep(name = "aspect_rules_ts", version = "2.2.0")
bazel_dep(name = "rules_nodejs", version = "6.0.5")
bazel_dep(name = "rules_go", version = "0.46.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")